@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-21T16:30:38Z",
+  "timestamp" : "2022-08-22T08:29:56Z",
   "count_outdated" : 748,
   "uniques_outdated" : 389,
-  "count" : 756,
-  "uniques" : 396,
+  "count" : 759,
+  "uniques" : 398,
   "clones" : [
     {
       "timestamp": "2022-08-08T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
