@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 4,
+  "count": 11,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-08T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2022-08-21T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
